force-app/main/default/objects/JBCXM__Milestone__c/JBCXM__Milestone__c.object-meta.xml
<CustomObject>
    <label>Milestone</label>
    <nameField>
        <displayFormat>JBM-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>