force-app/main/default/objects/JBCXM__Milestone__c/fields/JBCXM__Comment__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Comment__c</fullName>
    <label>Comment</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>