force-app/main/default/objects/JBCXM__Milestone__c/fields/JBCXM__Date__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>