force-app/main/default/objects/JBCXM__Milestone__c/fields/JBCXM__IsRelationship__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsRelationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Relationship</label>
    <type>Checkbox</type>
</CustomField>