force-app/main/default/objects/JBCXM__Milestone__c/fields/JBCXM__Milestone__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>