force-app/main/default/objects/JBCXM__Milestone__c/fields/JBCXM__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a look up to opportunity.Used this field to populate milestone by opportunity</description>
    <inlineHelpText>Select a milestone</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>