force-app/main/default/objects/JBCXM__Milestone__c/fields/JBCXM__Relationship__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GS Relationship</label>
    <referenceTo>JBCXM__GSRelationship__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>