force-app/main/default/objects/JBCXM__Milestone__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>NAME</columns>
    <columns>JBCXM__Milestone__c</columns>
    <columns>JBCXM__Account__c</columns>
    <columns>JBCXM__Opportunity__c</columns>
    <columns>JBCXM__Comment__c</columns>
    <columns>JBCXM__Customer__c</columns>
    <columns>JBCXM__Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>